--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -39,6 +39,7 @@
             <ul>
                 <li><a href="{{ url_for('public_sites.show_public_sites') }}">Visualizar sitios históricos</a></li>
                 <li><a href="{{ url_for('sites.index') }}">Gestión de sitios históricos</a></li>
+                <li><a href="{{ url_for('tags.index') }}">Gestión de etiquetas</a></li>
                 <li><a href="{{ url_for('validacion_propuestas') }}">Validación de propuestas</a></li>
                 <li><a href="{{ url_for('moderacion_reseñas') }}">Moderación de reseñas</a></li>
                 <li><a href="{{ url_for('users.index') }}">Gestión de usuarios</a></li>
