Agrego rol system admin y permisos

--- a/admin/src/web/templates/users/index.html
+++ b/admin/src/web/templates/users/index.html
@@ -6,7 +6,8 @@
 {% set role_labels = {
     'public': 'Usuario público',
     'editor': 'Editor',
-    'admin': 'Administrador'
+    'admin': 'Administrador',
+    'sysadmin': 'System Admin',
 } %}
 <div class="module-header">
     <h1>Gestión de usuarios</h1>
