--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -38,12 +38,18 @@
         <nav class="sidebar-nav">
             <ul>
                 <li><a href="{{ url_for('public_sites.show_public_sites') }}">Visualizar sitios históricos</a></li>
-                <li><a href="{{ url_for('sites.index') }}">Gestión de sitios históricos</a></li>
-                <li><a href="{{ url_for('tags.index') }}">Gestión de etiquetas</a></li>
-                <li><a href="{{ url_for('validacion_propuestas') }}">Validación de propuestas</a></li>
-                <li><a href="{{ url_for('moderacion_reseñas') }}">Moderación de reseñas</a></li>
-                <li><a href="{{ url_for('users.index') }}">Gestión de usuarios</a></li>
-                {% if session.get('user_role') == 'sysadmin' %}
+                {% set role = session.get('user_role') %}
+                {% if role in ['sysadmin', 'admin', 'editor'] %}
+                    <li><a href="{{ url_for('sites.index') }}">Gestión de sitios históricos</a></li>
+                    <li><a href="{{ url_for('validacion_propuestas') }}">Validación de propuestas</a></li>
+                    <li><a href="{{ url_for('moderacion_reseñas') }}">Moderación de reseñas</a></li>
+
+                    {% if role in ['sysadmin', 'admin'] %}
+                        <li><a href="{{ url_for('tags.index') }}">Gestión de etiquetas</a></li>
+                        <li><a href="{{ url_for('users.index') }}">Gestión de usuarios</a></li>
+                    {% endif %}
+                {% endif %}
+                {% if role == 'sysadmin' %}
                     <li><a href="{{ url_for('featureflags') }}">Feature Flags</a></li>
                 {% endif %}
             </ul>
