--- a/admin/src/web/templates/users/index.html
+++ b/admin/src/web/templates/users/index.html
@@ -77,9 +77,32 @@
                         </td>
                         <td>{{ user.created_at.strftime('%Y-%m-%d %H:%M') if user.created_at else '-' }}</td>
                         <td class="actions">
+                            {% if user.is_active %}
+                            {% if user.role != 'admin' and user.role != 'sysadmin'%}
+                                <form method="post"
+                                    action="{{ url_for('users.deactivate', user_id=user.id) }}"
+                                    class="inline-form"
+                                    onsubmit="return confirm('¿Seguro que querés desactivar este usuario?');">
+                                <button type="submit" class="secondary-button">Desactivar</button>
+                                </form>
+                            {% else %}
+                                <button type="button" class="secondary-button" disabled title="No se puede desactivar un Administrador">Desactivar</button>
+                            {% endif %}
+                            {% else %}
+                            <form method="post"
+                                    action="{{ url_for('users.activate', user_id=user.id) }}"
+                                    class="inline-form">
+                                <button type="submit" class="success-button">Activar</button>
+                            </form>
+                            {% endif %}
+
                             <a class="link-button" href="{{ url_for('users.edit', user_id=user.id) }}">Editar</a>
-                            <form method="post" action="{{ url_for('users.destroy', user_id=user.id) }}" onsubmit="return confirm('¿Eliminar usuario?');">
-                                <button type="submit" class="danger-button">Eliminar</button>
+
+                            <form method="post"
+                                action="{{ url_for('users.destroy', user_id=user.id) }}"
+                                style="display:inline"
+                                onsubmit="return confirm('¿Eliminar usuario?');">
+                            <button type="submit" class="danger-button">Eliminar</button>
                             </form>
                         </td>
                     </tr>
