--- a/admin/src/web/templates/sites/form.html
+++ b/admin/src/web/templates/sites/form.html
@@ -7,6 +7,16 @@
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
 >
+<style>
+  .site-map .leaflet-top.leaflet-left {
+    top: 16px;
+    left: 16px;
+  }
+  .site-map .leaflet-control {
+    box-shadow: 0 2px 6px rgba(15, 23, 42, 0.18);
+    border-radius: 6px;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
