agrego mas arreglos visuales

--- a/admin/src/web/templates/sites/index.html
+++ b/admin/src/web/templates/sites/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Sitios históricos{% endblock %}
+{% block title %}Gestión de Sitios Históricos{% endblock %}
 
 {% block content %}
 {% set can_create_site = has_permission('site_new') %}
@@ -130,7 +130,7 @@
                     <th>Provincia</th>
                     <th>Estado</th>
                     <th>Visibilidad</th>
-                    <th>Acciones</th>
+                    <th style="text-align: center;">Acciones</th>
                 </tr>
             </thead>
             <tbody>
